--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
 	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev --port ${PORT:-2244}",
+		"dev": "vite dev --host 0.0.0.0 --port ${PORT:-2244}",
 		"mk": "vite build",
 		"tmk": "tsc && vite build",
-		"start": "vite preview"
+		"start": "vite preview --host 0.0.0.0 --port ${PORT:-4422}"
 	},
 	"keywords": [],
 	"author": "chee",
