--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
 	"author": "chee",
 	"license": "AGPL-3.0+",
 	"dependencies": {
-		"@automerge/automerge": "2.2.9-alpha.2",
+		"@automerge/automerge": "^2.2.7",
 		"@automerge/automerge-codemirror": "^0.0.12",
-		"@automerge/automerge-repo": "2.0.0-alpha.11",
-		"@automerge/automerge-repo-network-broadcastchannel": "2.0.0-alpha.11",
+		"@automerge/automerge-repo": "^1.2.1",
+		"@automerge/automerge-repo-network-broadcastchannel": "^1.2.1",
 		"@automerge/automerge-repo-network-messagechannel": "^1.2.1",
-		"@automerge/automerge-repo-network-websocket": "2.0.0-alpha.11",
-		"@automerge/automerge-repo-storage-indexeddb": "2.0.0-alpha.11",
+		"@automerge/automerge-repo-network-websocket": "^1.2.1",
+		"@automerge/automerge-repo-storage-indexeddb": "^1.2.1",
 		"@codemirror/autocomplete": "^6.18.0",
 		"@codemirror/commands": "^6.6.0",
 		"@codemirror/highlight": "^0.19.8",
